[gd_scene load_steps=13 format=3 uid="uid://pvgfckq2e3xo"]

[ext_resource type="Script" path="res://battle_systems/Objects/Reagent/ReagentDropHandler/ReagentDropHandler.gd" id="1_otk8b"]
[ext_resource type="PackedScene" uid="uid://dr2ppmkbletq1" path="res://battle_systems/Objects/RecipePage/recipe_page.tscn" id="2_4tglj"]
[ext_resource type="Script" path="res://battle_systems/Objects/Reagent/ReagentDropHandler/RecipeController.gd" id="2_jna5a"]
[ext_resource type="FontFile" uid="uid://bn1yp4fkor0tt" path="res://assets/fonts/Handwriting_V2-Regular.ttf" id="4_wnumi"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_d5bf0"]
size = Vector2(160, 142)

[sub_resource type="Curve2D" id="Curve2D_d0kyj"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 64, -64, 64.4589, -0.0680889, -64.4589, 0.0680889, 0, -32, 0, 0, 0, 0, -64, -64, -64.1063, 0.113314, 64.1063, -0.113314, 0, -80, 0, 0, 0, 0, 64, -64)
}
point_count = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_512p2"]
bg_color = Color(0.933333, 0.764706, 0.603922, 1)
border_width_left = 5
border_width_bottom = 5
border_color = Color(0.25098, 0.121569, 0.141176, 1)

[sub_resource type="LabelSettings" id="LabelSettings_0ulbn"]
font = ExtResource("4_wnumi")
font_color = Color(0, 0, 0, 1)
outline_size = 2
outline_color = Color(0, 0, 0, 1)

[sub_resource type="Animation" id="Animation_7k54t"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../..:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-420, -185)]
}

[sub_resource type="Animation" id="Animation_1pk68"]
resource_name = "SlideIn"
length = 0.25
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../..:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.15, 0.2, 0.25),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(-420, -185), Vector2(-176, -185), Vector2(-166, -185), Vector2(-176, -185)]
}

[sub_resource type="Animation" id="Animation_p5n1y"]
resource_name = "SlideOut"
length = 0.25
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../..:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1, 0.25),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(-176, -185), Vector2(-150, -185), Vector2(-176, -185), Vector2(-420, -185)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_gex8u"]
_data = {
"RESET": SubResource("Animation_7k54t"),
"SlideIn": SubResource("Animation_1pk68"),
"SlideOut": SubResource("Animation_p5n1y")
}

[node name="ReagentDropHandler" type="Node2D"]
y_sort_enabled = true
script = ExtResource("1_otk8b")

[node name="Area2D" type="Area2D" parent="."]
collision_mask = 0
monitoring = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, -47)
shape = SubResource("RectangleShape2D_d5bf0")

[node name="Path2D" type="Path2D" parent="."]
unique_name_in_owner = true
curve = SubResource("Curve2D_d0kyj")

[node name="CombinePoint" type="Marker2D" parent="."]
unique_name_in_owner = true
position = Vector2(0, -57)

[node name="ApexPoint" type="Marker2D" parent="."]
unique_name_in_owner = true
position = Vector2(0, -164)

[node name="RecipeController" type="Control" parent="."]
unique_name_in_owner = true
layout_mode = 3
anchors_preset = 0
offset_left = -8.0
offset_top = -40.0
offset_right = -8.0
offset_bottom = -40.0
script = ExtResource("2_jna5a")

[node name="Config1" type="Control" parent="RecipeController"]
unique_name_in_owner = true
visible = false
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="RecipePage6" parent="RecipeController/Config1" instance=ExtResource("2_4tglj")]
layout_mode = 2
offset_left = 248.0
offset_top = 24.0
offset_right = 248.0
offset_bottom = 64.0

[node name="Config2" type="Control" parent="RecipeController"]
unique_name_in_owner = true
visible = false
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="RecipePage6" parent="RecipeController/Config2" instance=ExtResource("2_4tglj")]
layout_mode = 2
offset_left = 192.0
offset_top = 8.0
offset_right = 192.0
offset_bottom = 48.0
rotation = -0.159458

[node name="RecipePage7" parent="RecipeController/Config2" instance=ExtResource("2_4tglj")]
layout_mode = 2
offset_left = 304.0
offset_top = 11.0
offset_right = 304.0
offset_bottom = 51.0
rotation = 0.127731

[node name="Config3" type="Control" parent="RecipeController"]
unique_name_in_owner = true
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="RecipePage6" parent="RecipeController/Config3" instance=ExtResource("2_4tglj")]
layout_mode = 2
offset_left = 144.0
offset_top = 17.0
offset_right = 144.0
offset_bottom = 57.0
rotation = -0.254757

[node name="RecipePage7" parent="RecipeController/Config3" instance=ExtResource("2_4tglj")]
layout_mode = 2
offset_left = 250.0
offset_top = -15.0
offset_right = 250.0
offset_bottom = 25.0

[node name="RecipePage8" parent="RecipeController/Config3" instance=ExtResource("2_4tglj")]
layout_mode = 2
offset_left = 356.0
offset_top = 25.0
offset_right = 356.0
offset_bottom = 65.0
rotation = 0.297367

[node name="Config4" type="Control" parent="RecipeController"]
unique_name_in_owner = true
visible = false
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="RecipePage6" parent="RecipeController/Config4" instance=ExtResource("2_4tglj")]
layout_mode = 2
offset_left = 192.0
offset_top = 64.0
offset_right = 192.0
offset_bottom = 104.0
rotation = 0.0768577

[node name="RecipePage7" parent="RecipeController/Config4" instance=ExtResource("2_4tglj")]
layout_mode = 2
offset_left = 186.0
offset_top = -49.0
offset_right = 186.0
offset_bottom = -8.99999
rotation = -0.113426

[node name="RecipePage8" parent="RecipeController/Config4" instance=ExtResource("2_4tglj")]
layout_mode = 2
offset_left = 312.0
offset_top = -48.0
offset_right = 312.0
offset_bottom = -7.99999
rotation = 0.0822459

[node name="RecipePage9" parent="RecipeController/Config4" instance=ExtResource("2_4tglj")]
layout_mode = 2
offset_left = 309.0
offset_top = 65.0
offset_right = 309.0
offset_bottom = 105.0
rotation = -0.099105

[node name="Config5" type="Control" parent="RecipeController"]
unique_name_in_owner = true
visible = false
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="RecipePage" parent="RecipeController/Config5" instance=ExtResource("2_4tglj")]
layout_mode = 2
offset_left = 192.0
offset_top = 64.0
offset_right = 192.0
offset_bottom = 104.0

[node name="RecipePage2" parent="RecipeController/Config5" instance=ExtResource("2_4tglj")]
layout_mode = 2
offset_left = 144.0
offset_top = -48.0
offset_right = 144.0
offset_bottom = -8.0
rotation = -0.114707

[node name="RecipePage3" parent="RecipeController/Config5" instance=ExtResource("2_4tglj")]
layout_mode = 2
offset_left = 250.0
offset_top = -80.0
offset_right = 250.0
offset_bottom = -40.0

[node name="RecipePage4" parent="RecipeController/Config5" instance=ExtResource("2_4tglj")]
layout_mode = 2
offset_left = 352.0
offset_top = -48.0
offset_right = 352.0
offset_bottom = -8.0
rotation = 0.0843437

[node name="RecipePage5" parent="RecipeController/Config5" instance=ExtResource("2_4tglj")]
layout_mode = 2
offset_left = 304.0
offset_top = 64.0
offset_right = 304.0
offset_bottom = 104.0

[node name="MarginContainer" type="VBoxContainer" parent="."]
z_index = 2
offset_left = -420.0
offset_top = -185.0
offset_right = -179.0
offset_bottom = 14.0
alignment = 1

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_512p2")

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="DescriptionLabel" type="Label" parent="MarginContainer/PanelContainer/MarginContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
text = "Damage: XXX
Effect:
Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. "
label_settings = SubResource("LabelSettings_0ulbn")
autowrap_mode = 3

[node name="TextBoxAnimator" type="AnimationPlayer" parent="."]
unique_name_in_owner = true
root_node = NodePath("../MarginContainer/PanelContainer/MarginContainer")
libraries = {
"": SubResource("AnimationLibrary_gex8u")
}
